@@ -37,6 +37,8 @@ Functions:
    which are non-empty strings. [MG]
  * Added reglattr[p](), regxattr[p]() and regnattr[p](), regexp variants of 
    lattr[p](), xattr[p]() and nattr[p](). Suggested by Trinsec. [MG]
+ * The *emit() functions, and cbufferadd(), are now disabled when
+   function_side_effects are off. Suggested by Cheetah. [MG]
 
 Fixes:
  * Minor bug in benchmark() fixed. [MG]
